fix: fix adaptive on mobiles, add slider-wrapper's max-width to centrilize content

--- a/styles/style.css
+++ b/styles/style.css
@@ -534,7 +534,6 @@ button {
     line-height: 1.5;
 }
 
-/* Анимация автоскролла */
 @keyframes scrollReviews {
     0% {
             transform: translateX(0);
@@ -545,24 +544,25 @@ button {
     }
 }
 
-/* Адаптивность */
 @media (max-width: 1024px) {
     .review-card {
             flex: 0 0 calc((100% - 30px) / 2);
-            /* 2 карточки + 1 gap */
         }
 }
 
 @media (max-width: 768px) {
     .review-card {
         flex: 0 0 100%;
-        /* 1 карточка */
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .reviews__slider-wrapper {
+        max-width: 460px;
+        margin: 0 auto;
     }
 }
 
-@media (max-width: 575px) {
-    
-}
 /* Blog */
 
 /* Parallax */
